# Music_Insights

./: .gitignore  .ruff.toml  conf.py  pyproject.toml  readme.md  requirements.txt  run.py
.github/workflows/: docs.yml
app/: __init__.py  models.py  routes.py
app/static/css/: style.css
app/templates/: dashboard.html  index.html
docs/: conf.py  index.rst  modules.rst
tests/: test_models.py  test_routes.py
