[tool.poetry]
name = "tp2"
version = "0.1.0"
description = ""
authors = ["Guembri01 <bilel.guembri@outlook.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
pandas = "^2.2.3"
plotly = "^5.24.1"
datasets = "^3.2.0"
pytest = "^8.3.4"
flask-caching = "^2.3.0"
statsmodels = "^0.14.4"
flask-testing = "^0.8.1"
ruff = "^0.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
