[tool.poetry]
name = "tp2"
version = "0.1.0"
description = "A Flask-based web application for analyzing music data."
authors = ["Guembri01 <bilel.guembri@outlook.fr>"]
readme = "README.md"
license = "MIT"  # Add a license if you have one

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
pandas = "^2.2.3"
plotly = "^5.24.1"
datasets = "^3.2.0"
flask-caching = "^2.3.0"
statsmodels = "^0.14.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
flask-testing = "^0.8.1"
ruff = "^0.9.2"
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
generate-docs = "sphinx-build -b html docs docs/_build/html"